Faq sin sidebar

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,9 +1,68 @@
-<div>
 
-        <div>  
-            <h2 class="text-center pt-3">PREGUNTAS FRECUENTES</h2>
+      
+
+            <!-- :::::: Start Main Container Wrapper :::::: -->
+    <main id="main-container" class="main-container">
+        <div class="container">
+            
+            <div>  
+                <h5 class="tittle">PREGUNTAS FRECUENTES</h5>
+            </div>
+        
+            <div class="containerAcco col-md-8">
+                <div class="accordion" id="accordionSection">
+                    <div class="accordion-item mb-3">
+                        <h2 class="accordion-header">
+                            <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseOne">Call center</button></h2>
+                        <div class="accordion-collapse collapse show" id="collapseOne" data-bs-parent="#accordionSection">
+                            <div class="accordion-body">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item mb-3">
+                        <h2 class="accordion-header">
+                            <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseOne">Telefonos call</button></h2>
+                        <div class="accordion-collapse collapse show" id="collapseOne" data-bs-parent="#accordionSection">
+                            <div class="accordion-body">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item mb-3">
+                        <h2 class="accordion-header">
+                            <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseOne">Telefonos call</button></h2>
+                        <div class="accordion-collapse collapse show" id="collapseOne" data-bs-parent="#accordionSection">
+                            <div class="accordion-body">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item mb-3">
+                        <h2 class="accordion-header">
+                            <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseOne">Telefonos call</button></h2>
+                        <div class="accordion-collapse collapse show" id="collapseOne" data-bs-parent="#accordionSection">
+                            <div class="accordion-body">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item mb-3">
+                        <h2 class="accordion-header">
+                            <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseOne">Telefonos call</button></h2>
+                        <div class="accordion-collapse collapse show" id="collapseOne" data-bs-parent="#accordionSection">
+                            <div class="accordion-body">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+            </div>
+
+          
+            
         </div>
+    </main>  <!-- :::::: End MainContainer Wrapper :::::: -->
 
 
-</div>
 
