--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -4,3 +4,21 @@ body {
     justify-content: center;
   }
   
+.accordion-button {
+
+ background-color: royalblue;
+ justify-content: center;
+ font-family: sans-serif;
+ font-weight: bold;
+ text-transform: uppercase;
+ 
+}
+
+.tittle {
+
+  padding-bottom: 15px;
+  padding-top: 15px;
+  font-family: sans-serif;
+  font-weight: bold;
+
+}
