--- a/src/app/retiros/retiros.component.css
+++ b/src/app/retiros/retiros.component.css
@@ -34,3 +34,45 @@ body {
     border-radius: 5px;
     width: 210px;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        display: block;
+        font-size: x-large; 
+        }
+    
+    #titulo {
+        height: 80px;
+        font-size: 40px;
+        }
+
+    #withdrawals {
+        font-size: x-large;
+        }
+    .cuadros {
+        border-radius: 10px;
+        width:290px;
+        }
+    }
+
+@media only screen and (max-width: 390px) {
+    body {
+        line-height: 50px;
+        margin: 20px;
+        display: block;
+        font-size: xx-large; 
+        }
+    #titulo {
+        height: 80px;
+        font-size: 50px;
+        }
+    #withdrawals {
+        line-height: 30px;
+        margin: 20px;
+        font-size: xx-large;
+        }
+    .cuadros {
+        border-radius: 15px;
+        width:340px;
+        }
+    }
