--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <body>
   <img class="landing" src="assets/background-picture.png" />
   <h1>Tu dinero seguro y en un mismo lugar</h1>
