--- a/src/app/retiros/retiros.component.html
+++ b/src/app/retiros/retiros.component.html
@@ -2,29 +2,42 @@
     Retirar dinero     
 </div>
 
-    <body>
-        <div id="withdrawals">
-            Puedes optar por retirar a tu cuenta bancaria o retirar en cajero mediante Punto Efectivo con 
-            tu número de DNI y teléfono celular.
-        </div>
-        <form>
-            <div>Elige cuenta propia o punto efectivo</div>
-            <div>   
-                <input name="retiro-tipo" Type="radio" id="Cuenta-Propia" Value="Cuenta-Propia">
-                <label for="Cuenta-Propia">Cuenta Propia</label>
-            </div>
-            <div>
-                <input name="retiro-tipo" Type="radio" id="Punto-Efectivo" Value="Punto-Efectivo">
-                <label for="Punto-Efectivo">Punto Efectivo</label>
-            </div>
-        </form>
-        <form>  
-            <div>Pon el número de CVU, CBU o alias.</div> <!--dependiendo de cual se elija, deberia aparecer este o los otros dos-->
-               <div> <input name="transfer code" Type="text" maxlength="22" class="cuadros"/> </div>
-            <div>Pon tu número de DNI.</div>
-                <div> <input class="cuadros" name="DNI" maxlength="10"/> </div>
-            <div>Pon tu número de celular.</div>
-                <div> <input class="cuadros" name="celnum" type="tel" maxlength="20"/> </div>
-        </form>
+<div id="withdrawals">
+        Puedes optar por retirar a tu cuenta bancaria o retirar en cajero mediante Punto Efectivo con 
+        tu número de DNI y teléfono celular.
+</div>
+<body>   
+  <div>
+    <div id="accordion">
+      <div class="card2">
+        <div class="card-header" id="headingOne">
+          <h5 class="mb-0">
+          <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+            Cuenta Bancaria
+          </button>
+        </h5>
+      </div>
 
-    </body>
+      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+        <div class="card-body">
+          <app-bank-acc></app-bank-acc>
+        </div>
+      </div>
+    </div>
+    <div class="card2">
+      <div class="card-header" id="headingTwo">
+        <h5 class="mb-0">
+          <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Punto Efectivo
+          </button>
+        </h5>
+      </div>
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+        <div class="card-body">
+          <app-efec-punt></app-efec-punt>
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
+</body>
