I added a new component navbar

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,35 +1,7 @@
 <body>
   <div class="wrapper">
     <div class="slidenav">
-      <nav>
-        <h1 class="title">{{title}}</h1>
-        <ul>
-          <li>
-            <a>Thing</a>
-          </li>
-          <li>
-            <a>Thing</a>
-          </li>
-          <li>
-            <a>Thing</a>
-          </li>
-          <li>
-            <a>Thing</a>
-          </li>
-          <li>
-            <a>Thing</a>
-          </li>
-          <li>
-            <a>Thing</a>
-          </li>
-          <li>
-            <a>Thing</a>
-          </li>
-          <li>
-            <a>Thing</a>
-          </li>
-        </ul>
-      </nav>
+      <app-left-nav-bar></app-left-nav-bar>
     </div>
     <div class="site">
       <div class="container">
