Modificaciones left nav bar y retiros

--- a/src/app/left-nav-bar/left-nav-bar.component.css
+++ b/src/app/left-nav-bar/left-nav-bar.component.css
@@ -1,5 +1,26 @@
-.title{
-    font-family: Roboto;
-    color:white;
-    font-weight: 500;
+nav {
+    position: fixed;
+    width: 298px;
+    height: 100%;
+    background-color: #00B3A6;
+    padding: 1%;
   }
+
+nav ul li {
+    padding:3%;
+    text-align: left;
+    padding: 15px 10px;
+    list-style: none; /*quita los estilos por defecto de lista (ese punto feo) */
+    color: white;
+    border: 1px solid white; /*esto es un cuadrado para identificar cada uno, hay que distanciarlos */
+    cursor: pointer; /*esto sirve para que parezca el hacer click xd */
+
+}
+.title{
+  font-family: Roboto;
+  color:white;
+  font-weight: 500;
+  margin-left: 12%;
+  cursor: pointer;
+  border: 1px solid white; /*acá hay que ver como modificamos el tamaño del hitbox, para que solo aparezca el pointer en las letras WALED */
+}
