--- a/src/app/left-nav-bar/left-nav-bar.component.html
+++ b/src/app/left-nav-bar/left-nav-bar.component.html
@@ -2,28 +2,28 @@
   <h1 class="title">{{ title }}</h1>
   <ul>
     <li>
-      <a>Thing</a>
+      <a>Thing1</a>
     </li>
     <li>
-      <a>Thing</a>
+      <a>Thing2</a>
     </li>
     <li>
-      <a>Thing</a>
+      <a>Thing3</a>
     </li>
     <li>
-      <a>Thing</a>
+      <a>Thing4</a>
     </li>
     <li>
-      <a>Thing</a>
+      <a>Thing5</a>
     </li>
     <li>
-      <a>Thing</a>
+      <a>Thing6</a>
     </li>
     <li>
-      <a>Thing</a>
+      <a>Thing7</a>
     </li>
     <li>
-      <a>Thing</a>
+      <a>Thing8</a>
     </li>
   </ul>
 </nav>
