--- a/src/app/retiros/retiros.component.html
+++ b/src/app/retiros/retiros.component.html
@@ -1,5 +1,6 @@
 <app-left-nav-bar></app-left-nav-bar>
 <body>
+<div class="cuerpo">
 <div id="titulo">
     Retirar dinero     
 </div>
@@ -43,4 +44,5 @@
       </div>
     </div>
   </div>
+</div>
 </body>
