--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,17 +2,11 @@
 
 <div class="global-container">
   <div class="card register-form">
-    <mat-stepper #stepper>
+    <mat-stepper linear #stepper>
       <mat-step>
         <h3 class="card-title">
           <span> Para crear tu cuenta necesitamos validar tus datos </span>
         </h3>
-        <p>
-          El proceso puede tomarte unos minutos. Recordá tener a mano tu DNI.
-        </p>
-        <p>
-          El proceso puede tomarte unos minutos. Recordá tener a mano tu DNI.
-        </p>
         <p>
           El proceso puede tomarte unos minutos. Recordá tener a mano tu DNI.
         </p>
